[gd_scene load_steps=56 format=2]

[ext_resource path="res://frontend/SpeechInteractions.tscn" type="PackedScene" id=1]
[ext_resource path="res://frontend/Journal.tscn" type="PackedScene" id=2]
[ext_resource path="res://frontend/Red-dot.tscn" type="PackedScene" id=3]
[ext_resource path="res://frontend/ChatBox2.tscn" type="PackedScene" id=4]
[ext_resource path="res://frontend/NPCScene.gd" type="Script" id=5]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_019.png" type="Texture" id=6]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_003.png" type="Texture" id=7]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_006.png" type="Texture" id=8]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_008.png" type="Texture" id=9]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_021.png" type="Texture" id=10]
[ext_resource path="res://assets/sfx/fire.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_004.png" type="Texture" id=12]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_005.png" type="Texture" id=13]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_020.png" type="Texture" id=14]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_018.png" type="Texture" id=15]
[ext_resource path="res://assets/background/fire_place_room.png" type="Texture" id=16]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_022.png" type="Texture" id=17]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_029.png" type="Texture" id=18]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_028.png" type="Texture" id=19]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_009.png" type="Texture" id=20]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_007.png" type="Texture" id=21]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_015.png" type="Texture" id=22]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_027.png" type="Texture" id=23]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_014.png" type="Texture" id=24]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_012.png" type="Texture" id=25]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_026.png" type="Texture" id=26]
[ext_resource path="res://assets/GUI/configuration_gear.png" type="Texture" id=27]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_017.png" type="Texture" id=28]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_001.png" type="Texture" id=29]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_016.png" type="Texture" id=30]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_002.png" type="Texture" id=31]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_025.png" type="Texture" id=32]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_010.png" type="Texture" id=33]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_013.png" type="Texture" id=34]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_011.png" type="Texture" id=35]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_024.png" type="Texture" id=36]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_000.png" type="Texture" id=37]
[ext_resource path="res://assets/npcs/citizen_idle/0_Citizen_Idle Blinking_023.png" type="Texture" id=38]
[ext_resource path="res://assets/GUI/open_journal.png" type="Texture" id=39]
[ext_resource path="res://frontend/GUI/JournalTooltip.tscn" type="PackedScene" id=40]
[ext_resource path="res://frontend/GUI/SettingsTooltip.tscn" type="PackedScene" id=41]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 1024, 576 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1024, 0, 1024, 576 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 2048, 0, 1024, 576 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 3072, 0, 1024, 576 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 576, 1024, 576 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1024, 576, 1024, 576 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 2048, 576, 1024, 576 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 3072, 576, 1024, 576 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 1152, 1024, 576 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 1024, 1152, 1024, 576 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 2048, 1152, 1024, 576 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 3072, 1152, 1024, 576 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 37 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 21 ), ExtResource( 9 ), ExtResource( 20 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 25 ), ExtResource( 34 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 15 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 38 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="NPCScene" type="Node"]
script = ExtResource( 5 )

[node name="Background" type="AnimatedSprite" parent="."]
position = Vector2( 515.124, 299.324 )
scale = Vector2( 1, 1.03311 )
z_index = -1
frames = SubResource( 13 )
frame = 11
playing = true

[node name="SFx" type="AudioStreamPlayer2D" parent="."]

[node name="FirePlacePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -18.909
autoplay = true
bus = "FireFx"

[node name="IntroductionPlayer" type="AudioStreamPlayer" parent="."]

[node name="SpeechInteractions" parent="." instance=ExtResource( 1 )]
chatbox_path = NodePath("../Chatbox")
rec_path = NodePath("../Rec")

[node name="NPC" type="AnimatedSprite" parent="."]
position = Vector2( 870.143, 441.071 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 14 )
frame = 7
playing = true
flip_h = true

[node name="Journal" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 184.291, 217.48 )
scale = Vector2( 1.34192, 1.28357 )

[node name="Rec" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 971.582, 552.981 )
animation = "default"
frame = 5

[node name="Chatbox" parent="." instance=ExtResource( 4 )]
margin_left = 35.6762
margin_top = 447.142
margin_right = 715.676
margin_bottom = 577.142

[node name="ConfigurationGear" type="Button" parent="."]
margin_left = 856.0
margin_top = 16.0
margin_right = 904.0
margin_bottom = 61.0
icon = ExtResource( 27 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Journal_on_button" type="Button" parent="."]
margin_left = 776.0
margin_top = 16.0
margin_right = 832.0
margin_bottom = 61.0
icon = ExtResource( 39 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundControl" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC_voice_volume_control" type="HSlider" parent="SoundControl"]
margin_left = 870.0
margin_top = 139.185
margin_right = 1000.0
margin_bottom = 166.185
min_value = -20.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireFx_volume_control" type="HSlider" parent="SoundControl"]
margin_left = 870.0
margin_top = 69.5926
margin_right = 1000.0
margin_bottom = 137.593
min_value = -30.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire_label" type="Label" parent="SoundControl"]
margin_left = 880.0
margin_top = 79.0
margin_right = 919.0
margin_bottom = 93.0
text = "Fire fx"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC_Voice_label" type="Label" parent="SoundControl"]
margin_left = 880.0
margin_top = 130.0
margin_right = 919.0
margin_bottom = 144.0
text = "NPC Voice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneLoaded" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="JournalTooltip" parent="." instance=ExtResource( 40 )]
visible = false
position = Vector2( 832, 200 )

[node name="SettingsTooltip" parent="." instance=ExtResource( 41 )]
position = Vector2( 976, 200 )

[node name="HideSettingsTooltip" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="HideTooltipTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="finished" from="IntroductionPlayer" to="." method="_on_IntroductionPlayer_finished"]
[connection signal="speech_trigger" from="SpeechInteractions" to="." method="_on_SpeechInteractions_speech_trigger"]
[connection signal="pressed" from="ConfigurationGear" to="." method="_on_ConfigurationGear_pressed"]
[connection signal="pressed" from="Journal_on_button" to="." method="_on_Journal_on_button_pressed"]
[connection signal="value_changed" from="SoundControl/NPC_voice_volume_control" to="." method="_on_NPC_voice_volume_control_value_changed"]
[connection signal="value_changed" from="SoundControl/FireFx_volume_control" to="." method="_on_FireFx_volume_control_value_changed"]
[connection signal="timeout" from="SceneLoaded" to="." method="_on_SceneLoaded_timeout"]
[connection signal="timeout" from="HideSettingsTooltip" to="." method="_on_HideSettingsTooltip_timeout"]
[connection signal="timeout" from="HideTooltipTimer" to="." method="_on_SwitchTooltipTimer_timeout"]
